Fixed the msg bar not being aligned in the x axis

--- a/style.css
+++ b/style.css
@@ -117,16 +117,6 @@ body::-webkit-scrollbar{
     display: none;
 }
 
-.msg-bar{
-  position: fixed;
-  width: 97%;
-  /* keep input above safe area / keyboard on mobile */
-  bottom: calc(env(safe-area-inset-bottom, 10px) + 10px);
-  display: flex;
-  height: 70px;
-  gap:10px;
-}
-
 .input-container{
     width: 100%;
     height: 100%;
@@ -147,6 +137,10 @@ body::-webkit-scrollbar{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  bottom: 20px;
+  height: 70px;
+  gap:10px;
 }
 
 #msg-input{
@@ -434,4 +428,12 @@ h5, p{
 .recieved-msg h5{
   color: var(--blue);
   font-weight: 600;
+}
+
+@media(max-width:510px) {
+  .msg-bar{
+    width: 95%;
+    align-self: center;
+    margin: auto;
+  }
 }
